--- a/index.html
+++ b/index.html
@@ -1,51 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+     <head>
+         <meta charset="utf-8" />
+         <title>Webcam</title>
+         <style>
+             #videoElement {
+               border: 3px solid black;
+               background: grey;
+               width: 400px;
+               height: 300px
+              }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video page</title>
-    <style>
-        #container {
-            margin: 0px auto;
-            width: 500px;
-            height: 375px;
-            border: 10px #333 solid;
-        }
+              .container{
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+              }
+         </style>
+     </head>
+     <body>
+           <div class="container">
+            <video autoplay="true" id="videoElement"></video>
+           </div>
 
-        body {
-            background-color: aquamarine;
-        }
-    </style>
-</head>
+           <script type="text/javascript">
+                var video = document.querySelector("#videoElement");
+                navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUsermedia 
+                    || navigator.mozGetUserMedia || navigato.msGetUserMedia || navigator.oGetUserMedia;
 
-<body>
+                    if(navigator.getUserMedia){
+                      navigator.getUserMedia({video:true}, handleVideo, videoError)      
+                    }
 
-    <div id="container">
-        <video autoplay="true" id="videoElement"></video>
-    </div>
+                    function handleVideo(stream){
+                    video.srcObject = stream;
+                    video.play();
+                    }
 
-    <script>
-
-    var video = document.querySelector("#videoElement");
-    navigator.getUserMedia = navigator.getUserMedia||navigator.
-    webkitGetUsermedia||navigator.mozGetUserMedia||navigator.
-    msGetUserMedia||navigator.oGetUserMedia;
-
-    if(navigator.getUserMedia){
-        navigator.getUserMedia({video:true}, handleVideo, videoError)
-    }
-
-    function handleVideo(stream){
-        video.src = window.URL.createObjectURL(stream);
-    }
-
-    function videoError(e){
-        
-    }
-    </script>
-
-</body>
-
+                    function videoError(e){}
+           </script> 
+     </body>
 </html>
