moves chat to appropriate folder and applies the theme to it

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	              <a href="videoPage/camera.html"><span class="fa fa-video-camera mr-3"></span> Video Conferencing</a>
 	          </li>
 	          <li>
-              <a href="#"><span class="fa fa-comments mr-3"></span> Chat</a>
+              <a href="chatPage/chat.html"><span class="fa fa-comments mr-3"></span> Chat</a>
 	          </li>
 	          <li>
               <a href="#"><span class="fa fa-calendar mr-3"></span> Schedule</a>
