--- a/chatPage/chat.html
+++ b/chatPage/chat.html
@@ -25,7 +25,7 @@
 		  		<h1><a href="../index.html" class="logo">NG++ <span>Not a normal group</span></a></h1>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
-	            <a href="#"><span class="fa fa-home mr-3"></span> Home</a>
+	            <a href="../index.html"><span class="fa fa-home mr-3"></span> Home</a>
 	          </li>
 	          <li>
 	              <a href="../videoPage/camera.html"><span class="fa fa-video-camera mr-3"></span> Video Conferencing</a>
@@ -45,7 +45,7 @@
 
         <!-- Page Content  -->
       <div id="content" class="p-4 p-md-5 pt-5">
-        <h2 class="mb-4">HOME</h2>
+        <h2 class="mb-4">Chat</h2>
         <ul id="messages"></ul>
     
         <input id="message" type="text">
