added jquery for mute button

--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -47,8 +47,10 @@
         <div class="container">
             <video autoplay="true" id="videoElement"></video>
             <div class="buttons">
-            <button type="button" class="btn btn-danger Disconnect" id="disconnect">Disconnect</button>
-           <button type="button" class="btn btn-Success connect" id="connect">Connect</button>
+            <button type="button" class="btn btn-danger Disconnect" id="disconnect"><i class="fa fa-ban" aria-hidden="true"></i></button>
+            <button type="button" class="btn btn-secondary " id = "mute"><i class="fa fa-microphone-slash" aria-hidden="true"></i></button>
+            <button type="button" class="btn btn-secondary" onclick="window.location.href='../chatPage/chat.html'"><i class="fa fa-comment-o" aria-hidden="true"></i></button>
+           <button type="button" class="btn btn-Success connect" id="connect"><i class="fa fa-phone" aria-hidden="true"></i></button>
             </div>
            </div>
         
