added home page

--- a/index.html
+++ b/index.html
@@ -43,11 +43,41 @@
     	</nav>
 
         <!-- Page Content  -->
+
+		
+
+
       <div id="content" class="p-4 p-md-5 pt-5">
         <h2 class="mb-4">HOME</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+		<div class="cardContainer">
+		
+        <div class="card" style="width: 18rem;">
+			<img src="images/Talal edited.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+			  <h5 class="card-title">Talal Othman </h5>
+			  <p class="card-text">Created the <b>Video Conferencing module</b> in this project. To check out my other project, you can visit my GitHub.</p>
+			  <a href="#" class="btn btn-primary">GitHub</a>
+			</div>
+		</div>
+
+			<div class="card" style="width: 18rem;">
+				<img src="..." class="card-img-top" alt="...">
+				<div class="card-body">
+				  <h5 class="card-title">Omar Othman</h5>
+				  <p class="card-text">Created the <b>Chatting module</b> in this project. To check out my other project, you can visit my GitHub.</p>
+				  <a href="#" class="btn btn-primary">GitHub</a>
+				</div>
+			  </div>
+
+			  <div class="card" style="width: 18rem;">
+				<img src="" class="card-img-top" alt="...">
+				<div class="card-body">
+				  <h5 class="card-title">Mohammed Ali</h5>
+				  <p class="card-text">Created the <b>Schedule module</b> in this project. To check out my other project, you can visit my GitHub.</p>
+				  <a href="#" class="btn btn-primary">GitHub</a>
+				</div>
+			  </div>
+		  </div>
 		</div>
 
     <script src="js/jquery.min.js"></script>
