added images for the home page

--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
 		<div class="cardContainer">
 		
         <div class="card" style="width: 18rem;">
-			<img src="images/Talal edited.jpg" class="card-img-top" alt="...">
+			<img src="images/git TALAL.jfif" class="card-img-top" alt="...">
 			<div class="card-body">
 			  <h5 class="card-title">Talal Othman </h5>
 			  <p class="card-text">Created the <b>Video Conferencing module</b> in this project. To check out my other project, you can visit my GitHub.</p>
-			  <a href="#" class="btn btn-primary">GitHub</a>
+			  <a href="https://github.com/talalOthman" class="btn btn-primary">GitHub</a>
 			</div>
 		</div>
 
 			<div class="card" style="width: 18rem;">
-				<img src="..." class="card-img-top" alt="...">
+				<img src="images/omagapower.png" class="card-img-top" alt="...">
 				<div class="card-body">
 				  <h5 class="card-title">Omar Othman</h5>
 				  <p class="card-text">Created the <b>Chatting module</b> in this project. To check out my other project, you can visit my GitHub.</p>
-				  <a href="#" class="btn btn-primary">GitHub</a>
+				  <a href="https://github.com/omagapower" class="btn btn-primary">GitHub</a>
 				</div>
 			  </div>
 
 			  <div class="card" style="width: 18rem;">
-				<img src="" class="card-img-top" alt="...">
+				<img src="images/sad baquil.png" class="card-img-top" alt="...">
 				<div class="card-body">
 				  <h5 class="card-title">Mohammed Ali</h5>
 				  <p class="card-text">Created the <b>Schedule module</b> in this project. To check out my other project, you can visit my GitHub.</p>
-				  <a href="#" class="btn btn-primary">GitHub</a>
+				  <a href="https://github.com/MohammedAliBaaqail" class="btn btn-primary">GitHub</a>
 				</div>
 			  </div>
 		  </div>
