--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -31,7 +31,7 @@
               <a href="../chatPage/chat.html"><span class="fa fa-comments mr-3"></span> Chat</a>
 	          </li>
 	          <li>
-              <a href="#"><span class="fa fa-calendar mr-3"></span> Schedule</a>
+              <a href="../scheduler/calendar.html"><span class="fa fa-calendar mr-3"></span> Schedule</a>
 	          </li>
 	          
 	        </ul>
