--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -8,6 +8,7 @@
          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
          <link rel="stylesheet" href="../css/style.css">
          <link rel="stylesheet" href="style.css">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
      </head>
      <body>
         <div class="wrapper d-flex align-items-stretch">
