--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -55,8 +55,8 @@
           </a>
         
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" id = "disconnect" href="#">Disconnect</a>
-            <a class="dropdown-item" id = "connect" href="#">Connect</a>
+            <a class="dropdown-item" href="#">Camera settings</a>
+            <a class="dropdown-item" href="#">Microphone settings</a>
 
           </div>
         </div>
