change the API urls

--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -255,7 +255,7 @@
       };
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/create_contact.php",
+        url: "https://www.normalgroup.tk/videoPage/create_contact.php",
         method: "POST",
         data: JSON.stringify(markers),
         dataType: "json",
@@ -278,7 +278,7 @@
     $('#view_call_history').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/get_call_history.php",
+        url: "https://www.normalgroup.tk/videoPage/get_call_history.php",
         method: "GET",
         encode: true,
         processData: false,
@@ -307,7 +307,7 @@
     $('#view_contacts').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/get_contacts.php",
+        url: "https://www.normalgroup.tk/videoPage/get_contacts.php",
         method: "GET",
         encode: true,
         processData: false,
@@ -335,7 +335,7 @@
     $('#view_status').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/get_status.php",
+        url: "https://www.normalgroup.tk/videoPage/get_status.php",
         method: "GET",
         encode: true,
         processData: false,
