--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -95,11 +95,11 @@
             <form>
               <div class="form-group">
                 <label for="exampleInputEmail1">Full Name</label>
-                <input type="text" class="form-control form" id="full_name" placeholder="Enter Full Name" required>
+                <input type="text" class="form-control" style="border: 0.25px solid black;" id="full_name" placeholder="Enter Full Name" required>
               </div>
               <div class="form-group">
                 <label for="exampleInputPassword1">Location</label>
-                <input type="text" class="form-control form" id="location" placeholder="Enter location" required>
+                <input type="text" class="form-control" style="border: 0.25px solid black;" id="location" placeholder="Enter location" required>
               </div>
 
 
