Major update to the 'videoPage' API

--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -278,7 +278,7 @@
     $('#view_call_history').on('click', function () {
 
       $.ajax({
-        url: "https://www.normalgroup.tk/videoPage/get_call_history.php",
+        url: "http://localhost:3000/videoPage/api/CallHistoryRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
@@ -289,8 +289,8 @@
 
           $('#call_history').html('');
 
-          if (Array.isArray(resultsJSON[0].message)) {
-            resultsJSON[0].message.map(user => {
+          if (Array.isArray(resultsJSON)) {
+            resultsJSON.map(user => {
               $('#call_history').append('<tr> <td>' + user.caller_name + '</td> <td>' + user
                 .call_duration + '</td> </tr>');
             })
@@ -307,7 +307,7 @@
     $('#view_contacts').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/api/RestController.php?view=allContacts",
+        url: "http://localhost:3000/videoPage/api/ContactRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
@@ -335,7 +335,7 @@
     $('#view_status').on('click', function () {
 
       $.ajax({
-        url: "https://www.normalgroup.tk/videoPage/get_status.php",
+        url: "http://localhost:3000/videoPage/api/StatusRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
@@ -346,8 +346,8 @@
 
           $('#statusList').html('');
 
-          if (Array.isArray(resultsJSON[0].message)) {
-            resultsJSON[0].message.map(user => {
+          if (Array.isArray(resultsJSON)) {
+            resultsJSON.map(user => {
               $('#statusList').append('<tr> <td>' + user.device_name + '</td> <td>' + user
                 .device_status + '</td> </tr>');
             })
