changed the API request link for all functions

--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -278,7 +278,7 @@
     $('#view_call_history').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/api/CallHistoryRestController.php?view=all",
+        url: "https://www.normalgroup.tk/videoPage/api/CallHistoryRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
@@ -307,7 +307,7 @@
     $('#view_contacts').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/api/ContactRestController.php?view=all",
+        url: "https://www.normalgroup.tk/videoPage/api/ContactRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
@@ -335,7 +335,7 @@
     $('#view_status').on('click', function () {
 
       $.ajax({
-        url: "http://localhost:3000/videoPage/api/StatusRestController.php?view=all",
+        url: "https://www.normalgroup.tk/videoPage/api/StatusRestController.php?view=all",
         method: "GET",
         encode: true,
         processData: false,
