bug with nginx pending to resolve

--- a/videoPage/camera.html
+++ b/videoPage/camera.html
@@ -307,7 +307,7 @@
     $('#view_contacts').on('click', function () {
 
       $.ajax({
-        url: "api2/index.php/allContacts",
+        url: "https://www.normalgroup.tk/videoPage/api2/index.php/allContacts",
         method: "GET",
         encode: true,
         processData: false,
