--- a/scheduler/calendar.html
+++ b/scheduler/calendar.html
@@ -2,7 +2,9 @@
      <head>
          <meta charset="utf-8" />
          <title>Schedule</title>
-
+		 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+		
+		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
 
@@ -10,6 +12,7 @@
 	 
 		 
 		 <link rel="stylesheet" href="fonts/icomoon/style.css">
+		 <link rel="stylesheet" href="css/style1.css">
 	   
 		 <link href='fullcalendar/packages/core/main.css' rel='stylesheet' />
 		 <link href='fullcalendar/packages/daygrid/main.css' rel='stylesheet' />
@@ -99,6 +102,43 @@
 		  </div>
 			
 			
+
+
+
+
+		  <div class="input">
+			  <h1>Check Temp</h1>
+			<input type="text" placeholder="Enter the city" class="input_text">
+			<input type="submit" value="Submit" class="submit">
+		  </div>
+		</div>
+		
+		
+		
+		<div class="footer">
+		<div class="input">
+		  <div class="card">
+			<h1 class="name" id="name"></h1>
+			<p class="temp"></p>
+			<p class="clouds"></p>
+			<p class="desc"></p>
+		  </div>
+		</div>
+	</div>
+		<script src="js/app.js"></script>
+		
+
+
+
+
+
+
+
+
+
+
+
+
 		
 			<script src="js/jquery-3.3.1.min.js"></script>
 			<script src="js/popper.min.js"></script>
@@ -210,6 +250,35 @@
 
 		   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script defer src="js/freenbar.min.js"></script>
-     </body>
+     
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+	 
+
 	 
 </html>
